--- a/Colecionaveis03/.eslintrc.json
+++ b/Colecionaveis03/.eslintrc.json
@@ -19,6 +19,7 @@
     ],
     "rules": {
       "no-unused-vars": "off",
+      "no-param-reassign": "off",
       "global-require": "off",
       "react/prop-types": "off",
       "react/jsx-filename-extension": "off",
